app/assets/stylesheets/body.css.scss
/* mixins, variables, etc. */
@import "bootstrap";
@import "mixins";
@import "variables";

// Change these selectors to one body class that can be added to templates, rather than listing out new classes for the same outcome
body {
    // padding-top: 60px;
    position: relative;
    z-index: 1;

    &.waitlist-page--construction {
        .desktop-wrapper,
        .mobile-container {
            position: relative;
            height: 100vh;
        }
    }

    &.confirmation-page,
    &.mobile-header--hide,
    &.mobile-home,
    &.gameplay-page--2048,
    &.leaderboard-page--mobile,
    &.no-top-padding,
    &.set-username-page {
        padding-top: 0;
    }

    &.gameplay-page,
    &.intermediate,
    &.tutorial-page  {
        .bottom-navigation {
            display: none;
        }
    }

    &#onboarding-walkthrough {
        padding-top: 0;
        .logo-wrapper {
            display: none;
        }
    }

    // Add padding to bottom of page
    &.leaderboard-index-page--mobile,
    &.mobile-games-page,
    &.survey-page,
    &.redeem-page--mobile {
        padding-bottom: 50px;
    }

    &.mobile-games-page {
        .mobile-container {
            // background-image: url("/assets/blurred-bg.jpg");
            background-size: 100%;
            // background-repeat: no-repeat;
            // background-attachment: fixed;
        }
    }

    &.no-bg {
        .mobile-container {
            background-image: none;
            background-color: $white;
        }
    }
    &.register-page {
        .mobile-container {
            height: 100vh;
        }
        padding: 0 7.5% 20px;
        .logo-wrapper {
            padding-top:0;
            display: none;
        }
        .top-title {
            margin: 20px auto 15px;
        }
        form {
            margin: 0;
        }
    }
    &.wam {
        .bottom-content__container {
            bottom: 5vh;
        }
        .form-swap {
            bottom: 5vh;
        }
        .form-wrap {
            @include vertical-align(relative, 50vh);
        }
    }

    &.social-media-browser {
        .bottom-content__container {
            bottom: 20vh;
        }
    }

    &.refer-page--mobile {
        .mobile-container {
            height: calc(100vh - 110px);
        }
    }

    &.purchase-page--mobile  {
        .back-to-home {
            position: absolute;
            top: 20px;
            right: 20px;

            .fa {
                color: $blue-steel;
                font-size: $xl;
            }
        }

        .mobile-container {
            position: relative;
            height: calc(100vh - 50px);
        }
    }

    &.set-username-page {
        overflow: hidden;

        .mobile-header,
        .bottom-navigation {
            display: none;
        }
        .form-wrap {
            padding: 0 7.5%;
        }
    }
}

